# drifts-and-complexity

./: .gitignore  .gitmodules  .pre-commit-config.yaml  01_preprocessing.ipynb  02_explore_change_point_detection.ipynb  03_check_complexity_measures_for_correlation.ipynb  04_combined_results_analysis.ipynb  05_complexity_range_estimate.ipynb  10_complexity metric problematization.ipynb  Makefile  README.md  add_Kraus_data_to_Adams_evaluation.ipynb  assess_datasets.py  bootstrap.ps1  combine_drifts.ipynb  combine_results.py  complexity_correlation_problematization.py  complexity_results.py  complexity_sample_size_correlation_analysis.py  environment-ci.yml  environment.yml  install_r_packages.r  main.py  mypy.ini  playground.py  pyproject.toml  pytest.ini  requirements-ci.txt  requirements.txt  run_bias_problematization.py  run_bias_study.py  setup.sh  test.py
.github/workflows/: ci.yml
configuration/: data_dictionary_example.json  window_config.yml
data/: data_dictionary.json  default_data_dictionary.json
data/real/: .gitignore
data/real/BPIC12/: source.txt
data/real/RTFMP/: source.txt
data/synthetic/BPM fundamentals_10.10_loan application process/: 10-ch9_loan5.bpmn  10-ch9_loan5_scenario.bpmn
data/synthetic/BPM fundamentals_3.6_order-to-cash process/: 4-ch3_PurchaseOrder2.bpmn  4-ch3_PurchaseOrder2_scenario (1).bpmn  4-ch3_PurchaseOrder2_scenario.bpmn
data/synthetic/BPM fundamentals_7.10_credit application process with rework/: 10-ch7_CreditApplicationRework.bpmn  10-ch7_CreditApplicationRework_scenario.bpmn
data/synthetic/BPM fundamentals_7.15_claim-to-resolution process/: diagram.bpmn  scenario.bpmn
data/synthetic/linear process one variant/: linear process 4 activities_v02.bpmn
data/synthetic/simple_loop/: simple_loop.bpmn
dev/: README.md
dev/config/: .pre-commit-config.yaml  mypy.ini  pytest.ini
dev/docs/: DEPENDENCY_MANAGEMENT.md  SUBMODULE_REORGANIZATION.md  TYPE_CHECKING.md
docs/: MYPY_SETUP.md  SUBMODULE_REORGANIZATION.md
results/: .gitignore
scripts/: 01_preprocessing.ipynb  fix-types.py  gitmodules_template  mypy-lenient.ini  reorganize_submodules.py  typecheck.bat  typecheck.py
scripts/02_window_size_bias/: run_bias_study.py  test.py
scripts/03_impact_change_complexity/01_computation_scripts/: assess_datasets.py  combine_results.py
scripts/bias_study/: compare_results.py  run_bias_problematization.py  run_bias_study.py
scripts/change_study/: window_config.yml
scripts/change_study/computations/: assess_datasets.py  combine_results.py
tests/: COVERAGE_SUMMARY.md  __init__.py  conftest.py  expected_metric_values.json  test_basic.py  test_inext_bootstrap.py
tests/utils/: test_sampling_helper.py
tests/utils/bootstrapping/: test_inext_bootstrap_sampler.py
tests/utils/normalization/: test_normalizers.py  test_orchestrator.py
tests/utils/population/: README.md  __init__.py  test_population_distribution.py  test_population_distributions.py
utils/: SampleConfidenceIntervalExtractor.py  __init__  __init__.py  comparison_table.py  complexity_assessors.py  complexity_from_populations.py  constants.py  csv_table_generation.py  drift_io.py  helpers.py  inext_adapter.py  latex_table_generation.py  master_table.py  parallel.py  population_estimates.py  process_complexity_adapter.py  sampling_helper.py
utils/bootstrapping/: __init__.py
utils/bootstrapping/bootstrap_samplers/: __init__.py  bootstrap_sampler.py  inext_bootstrap_sampler.py
utils/complexity/: __init__.py  assessors.py  complexity_from_populations.py  registry.py
utils/complexity/adapters/: base.py  population_inext.py  population_simple.py  vidgof.py
utils/complexity/measures/: __init__.py  measure.py  (+1 more)
utils/normalization/: __init__.py  orchestrator.py
utils/pipeline/: __init__.py  compute.py
utils/plotting/: __init__.py  complexity.py  coverage_curves.py  plot_cis.py  plot_correlations.py  plot_inext_curves.py
utils/population/: __init__.py  chao1.py  chao1_helpers.py  estimators.py  population_distribution.py  population_distributions.py
utils/windowing/: __init__.py  helpers.py  loader.py  window.py  windowing.py
(+106 files in other folders)
